--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "server": "node ./server.js",
-    "dev": "concurrently \"react-scripts start\" \"npm run server\"",
+    "dev": "concurrently \"react-scripts start\" \"node ./server.js\"",
     "start": "npm run server",
     "build": "react-scripts build",
     "test": "react-scripts test",
